--- a/admin/src/App.css
+++ b/admin/src/App.css
@@ -1,7 +1,10 @@
 .container{
-    display: flex; 
+    display: flex;
 }
 .link{
     text-decoration: none;
     color: inherit;
+}
+body {
+    background: linear-gradient(90deg, rgba(35,37,38,1) 0%, rgba(65,67,69,1) 31%);
 }
